--- a/index0.html
+++ b/index0.html
@@ -27,7 +27,7 @@
   <!-- Add your site or application content here -->
 <header>
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <a href="#"><img src="" alt="umlugged logo"></a>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -37,44 +37,36 @@
       </nav>
     </div>
 </header>
-
 <main>
-
-  <section class="hero-area">
-    <div class="content-wrapper">
-      <h1>Retreat from the desk, return refreshed.</h1>
-    </div>
+  <section>
+    <h1>Retreat from the desk, return refreshed.</h1>
   </section>
 
   <aside>
-    <div class="content-wrapper">
-      <div class="form-description">
-        <h3>Want to join the next retreat?</h3>
-        <p>Find out when we are holding our next retreat and how your company or team can sign up!
-        </p>
-      </div>
-      <div class="form">
-        <h3>Find out more</h3>
-        <input type="text" name="name" value="email address">
-        <input type="button" value="Download Itinerary">
-      </div>
+    <div>
+      <input type="text" name="name" value="email address">
+      <input type="button" value="Download Itinerary">
+      <h2>Want to join the next retreat?</h2>
+      <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+      <p>Find out more</p>
+      <p>name@email.com</p>
+      <p>DOWNLOAD ITINERARY</p>
     </div>
   </aside>
-
 </main>
 
 <footer>
   <div class="content-wrapper">
     <div class="footer-content">
       <div class="contact">
-        <h4>Contact</h4>
+        <p>Contact</p>
         <address>
-          <p>555-555-5555<br>hello@unplugged.com</p>
+          <p>555-555-5555 hello@unplugged.com</p>
         </address>
       </div>
     </div>
       <div class="social">
-        <h4>Social</h4>
+        <p>Social</p>
         <div class="social-icons">
           <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
           <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
