--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
   <meta property="og:title" content="">
   <meta property="og:type" content="">
   <meta property="og:url" content="">
