--- a/about/index.html
+++ b/about/index.html
@@ -54,7 +54,9 @@
       </section>
 
       <section class="map">
-        <figure></figure>
+        <figure><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d48491.45656077147!2d-74.49863569030988!3d40.56994768580195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1605210665433!5m2!1sen!2sus"
+          width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </figure>
       </section>
 
         </div> <!-- mission content wrapper ends -->
